--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(to bottom right, #bddcf2, #ffffff); /* Gradient from top left to bottom right */
+    background: #d3e4f1; /* Gradient from top left to bottom right */
     box-sizing: border-box;
     color: #333;
     font-size: 1.5rem;
     letter-spacing: -0.015em;
-    text-align: center;
     margin: 0;
 }
 
@@ -19,8 +18,6 @@ body {
     text-transform: uppercase;
     text-shadow: 2px 2px 4px rgba(84, 79, 101, 0.5);
 }
-
-
 
 .container {
     display: flex;
@@ -50,10 +47,14 @@ td {
 
 .sidebar {
     width: 20%;
-    background-color: #6b8b99; /* Darker blue-gray sidebar background color */
-    padding-top: 20px;
+    background-color: #6b997f; /* Darker blue-gray sidebar background color */
+
     padding-bottom: 100%;
     color: #fff; /* White text color for better contrast */
+}
+
+.sidebar h2{
+    text-align: center;
 }
 
 .sidebar a {
@@ -72,7 +73,6 @@ td {
 }
 
 
-
 /* Content styles */
 .content {
     padding: 10px;
@@ -84,6 +84,38 @@ td {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.clock {
+    text-align: right;
+    font-size: 18px;
+
+}
+
+#time {
+    height: 24px;
+    line-height: 24px; 
+}
+
+.header{
+  display: flex;
+  margin: 10px;
+}
+
+.header h2{
+  margin-block-start: 30px;
+  margin-block-end: 0px;
+  margin-left: -17px;
+  cursor: default;
+  font-size: 30px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.logo {
+
+  width: 80px; /* Adjust the width as needed */
+  height: 80px; /* To maintain the aspect ratio */
+
 }
 
 .box {
@@ -99,6 +131,7 @@ td {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 #averageMoisturePercentage {
@@ -167,43 +200,177 @@ td {
     border-radius: 4px;
 }
 
+.dstatus{
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
 
-/* Style the range input */
-input[type="range"] {
-    appearance: none; /* Remove the default styling */
-    background: linear-gradient(to right, #c5dfea, #2e85cc); /* Define a gradient background */
-    border-radius: 1em;
-    outline: none; /* Remove the default outline */
-    transition: opacity 1s; /* Add a transition effect for smooth changes */
-    width: 60px;
+
+.switchdiv{
+display: flex;
+justify-content: center;
+
+
+}
+
+.offline {
+    color: red;
+  }
+
+  .online {
+    color: green;
+  }
+
+.switch input
+{
+  display: none;
+}
+
+.switch 
+{
+  display: inline-block;
+  width: 60px; /*=w*/
+  height: 30px; /*=h*/
+  margin: -16px;
+  margin-left: 10px;
+  margin-right: 10px;
+  transform: translateY(50%);
+  position: relative;
+}
+
+.slider
+{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 30px;
+  box-shadow: 0 0 0 2px #777, 0 0 4px #777;
+  cursor: pointer;
+  border: 4px solid transparent;
+  overflow: hidden;
+  transition: 0.2s;
+}
+
+.slider:before
+{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #777;
+  border-radius: 30px;
+  transform: translateX(-30px); /*translateX(-(w-h))*/
+  transition: 0.2s;
+}
+
+input:checked + .slider:before
+{
+  transform: translateX(30px); /*translateX(w-h)*/
+  background-color: rgb(50, 112, 205);
+}
+
+input:checked + .slider
+{
+  box-shadow: 0 0 0 2px rgb(50, 112, 205), 0 0 8px rgb(50, 112, 205);
+}
+
+.switch200 .slider:before
+{
+  width: 200%;
+  transform: translateX(-82px); /*translateX(-(w-h))*/
+}
+
+.switch200 input:checked + .slider:before
+{
+  background-color: red;
+}
+
+.switch200 input:checked + .slider
+{
+  box-shadow: 0 0 0 2px red, 0 0 8px red;
+}
+  
+
+  .loginsignup {
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  #box {
+    display: flex;
+    width: 300px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    background-color: #f5f5f5;
+    flex-direction: column;
+  }
+  
+  /* Style for the header "Login" or "Signup" */
+  #box div {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  
+  #box label {
+    display: block;
+    margin-bottom: 5px;
+    text-align: left;
+  }
+  
+  #box input[type="text"],
+  #box input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+  }
+  
+  #box.signup {
+    width: 400px;
+  }
+  
+  #box.signup input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+  }
+  
+  #button {
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
     cursor: pointer;
   }
   
-  /* Style the thumb (slider handle) */
-  input[type="range"]::-webkit-slider-thumb {
-    appearance: none;
-    width: 2em;
-    height: 2em;
-    background: white; /* Change the background color to white */
-    border-radius: 50%;
-    cursor: pointer;
+  #box a {
+    text-decoration: none;
+    color: #3498db;
+    font-weight: bold;
   }
   
-  /* Style the label for the irrigation switch */
-  label[for="httpSlider"] {
-
-    font-size: 1em;
-    margin-right: 10px;
-    color: #333;
-  }
-  
-
-
 @media screen and (max-width: 965px) {
+  .logo {
+
+    width: 80px; /* Adjust the width as needed */
+    height: 80px; /* To maintain the aspect ratio */
+  
+  }
     body {
         font-size: 1rem;
     }
-
+    .sidebar h2{
+       display: none;
+    }
     .container {
         display: flex;
         flex-direction: column;
@@ -220,7 +387,7 @@ input[type="range"] {
     .sidebar a {
         padding: 25px 8px;
         text-decoration: none;
-        font-size: 18px;
+        font-size: 15px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -234,7 +401,7 @@ input[type="range"] {
     }
 
     th {
-        font-size: 17px;
+        font-size: 7px;
         padding: 10px 5px;
     }
 
@@ -246,3 +413,5 @@ input[type="range"] {
         flex-wrap: wrap;
     }
 }
+
+ 
