--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: #d3e4f1; /* Gradient from top left to bottom right */
+    background: #f9f9f9;
     box-sizing: border-box;
     color: #333;
     font-size: 1.5rem;
@@ -17,6 +17,8 @@ body {
     margin-top: 20px;
     text-transform: uppercase;
     text-shadow: 2px 2px 4px rgba(84, 79, 101, 0.5);
+    margin-block-start: 2px;
+    margin-block-end: 9px;
 }
 
 .container {
@@ -46,11 +48,13 @@ td {
 }
 
 .sidebar {
+  
     width: 20%;
-    background-color: #6b997f; /* Darker blue-gray sidebar background color */
-
-    padding-bottom: 100%;
+    background-color: #6b7999; /* Darker blue-gray sidebar background color */
+    border-radius: 5px;
+    padding-bottom: 50%;
     color: #fff; /* White text color for better contrast */
+    box-shadow: 0 0 8px rgba(18, 15, 32, 0.5);
 }
 
 .sidebar h2{
@@ -69,20 +73,20 @@ td {
 }
 
 .sidebar a:hover {
-    background-color: #4a6470; /* Slightly darker blue-gray on hover */
+  background-color: #3c4e77; /* Slightly darker blue-gray on hover */
 }
 
 
 /* Content styles */
 .content {
-    padding: 10px;
+    padding: 5px;
     width: 90%;
 }
 
 .box1div {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
@@ -121,7 +125,8 @@ td {
 .box {
     border: 1px solid #ccc;
     padding: 10px;
-    margin: 20px;
+    margin: 20px 20px;
+    
     width: 180px;
     height: 80px;
     background-color: #f8f8f8; /* Very light gray background */
@@ -134,24 +139,33 @@ td {
     text-align: center;
 }
 
-#averageMoisturePercentage {
-    font-weight: bold;
+.filters{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
+}
+
+.filters a{
+    text-decoration: none;
+
 }
 
 #averageMoistureBox {
-    background-color: #b8e0a8; /* Pastel green */
+    background-color: #00BFFF; /* Pastel green */
 }
 
 #averageNitrogenBox {
-    background-color: #f9c781; /* Pastel orange */
+    background-color: #00A36C; /* Pastel orange */
 }
 
 #averagePhosphorusBox {
-    background-color: #d5b3e4; /* Pastel lavender */
+    background-color: #FF5733; /* Pastel lavender */
 }
 
 #averagePotassiumBox {
-    background-color: #a6d4e9; /* Pastel light blue */
+    background-color: #FFC300; /* Pastel light blue */
 }
 
 .pagination {
@@ -357,8 +371,36 @@ input:checked + .slider
     color: #3498db;
     font-weight: bold;
   }
-  
+  canvas{
+    background-color: #f9f9f9;
+  }
+
+  .chart-container{
+    border-radius: 5px;
+    border: 1px solid;
+    margin: auto;
+    width: 90%;
+    height: 500px !important;
+    padding-bottom: 40px;
+    background-color: #6b7999;
+    background-clip: content-box;
+  }
+  .chart-container h5{
+    margin-block-start: 5px;
+    margin-block-end: 5px;
+    text-align: center;
+    color: #f9f9f9;
+  }
+    
 @media screen and (max-width: 965px) {
+  .chart-container{
+    width: 100%;
+    height: 300px !important;
+  }
+  .content{
+    padding: 0px;
+    width: 100%;
+  }
   .logo {
 
     width: 80px; /* Adjust the width as needed */
