--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ td {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: background-color 0.3s; /* Add a transition on background-color */
 }
 
 .sidebar a:hover {
@@ -78,9 +79,21 @@ td {
 
 
 /* Content styles */
+@keyframes contentAnimation {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .content {
-    padding: 5px;
-    width: 90%;
+  padding: 5px;
+  width: 90%;
+  animation: contentAnimation 0.5s ease-in-out; /* Apply the animation to .content */
 }
 
 .box1div {
@@ -91,7 +104,7 @@ td {
 }
 
 .clock {
-    text-align: right;
+    text-align: left;
     font-size: 18px;
 
 }
@@ -121,6 +134,7 @@ td {
   height: 80px; /* To maintain the aspect ratio */
 
 }
+
 
 .box {
     border: 1px solid #ccc;
@@ -153,20 +167,22 @@ td {
 }
 
 #averageMoistureBox {
-    background-color: #00BFFF; /* Pastel green */
+  background-color: #B8E7FF; /* Very light blue-green */
 }
 
 #averageNitrogenBox {
-    background-color: #00A36C; /* Pastel orange */
+  background-color: #A4FFC9; /* Very light green */
 }
 
 #averagePhosphorusBox {
-    background-color: #FF5733; /* Pastel lavender */
+  background-color: #FFC3B9; /* Very light orange */
 }
 
 #averagePotassiumBox {
-    background-color: #FFC300; /* Pastel light blue */
+  background-color: #FFFBCC; /* Very light yellow */
 }
+
+
 
 .pagination {
     display: flex;
@@ -214,17 +230,75 @@ td {
     border-radius: 4px;
 }
 
-.dstatus{
+.dstatush{
     margin-block-start: 0;
     margin-block-end: 0;
 }
 
 
+
+.h4filters{
+  margin-block-start: 22px;
+  margin-block-end: 22px;
+
+}
+
+.button-3 {
+  appearance: none;
+  background-color: #2ea44f;
+  border: 1px solid rgba(27, 31, 35, .15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 6px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+  transition: background-color 0.3s; /* Add a transition on background-color */
+}
+
+.button-3:focus:not(:focus-visible):not(.focus-visible) {
+  box-shadow: none;
+  outline: none;
+}
+
+.button-3:hover {
+  background-color: #2c974b;
+}
+
+.button-3:focus {
+  box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+  outline: none;
+}
+
+.button-3:disabled {
+  background-color: #94d3a2;
+  border-color: rgba(27, 31, 35, .1);
+  color: rgba(255, 255, 255, .8);
+  cursor: default;
+}
+
+.button-3:active {
+  background-color: #298e46;
+  box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+}
+
 .switchdiv{
 display: flex;
-justify-content: center;
-
-
+justify-content: space-between;
+margin: 0 550px;
 }
 
 .offline {
@@ -239,7 +313,9 @@ justify-content: center;
 {
   display: none;
 }
-
+.hamburger{
+  display: none;
+}
 .switch 
 {
   display: inline-block;
@@ -311,6 +387,8 @@ input:checked + .slider
     margin-top: 100px;
     display: flex;
     justify-content: center;
+    animation: contentAnimation 0.5s ease-in-out; /* Apply the animation to .content */
+    
   }
   
   #box {
@@ -320,6 +398,8 @@ input:checked + .slider
     border: 1px solid #ccc;
     background-color: #f5f5f5;
     flex-direction: column;
+    border-radius: 5px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
   }
   
   /* Style for the header "Login" or "Signup" */
@@ -385,75 +465,147 @@ input:checked + .slider
     background-color: #6b7999;
     background-clip: content-box;
   }
+
+  .insights-container{
+
+    border-radius: 5px;
+    border: 1px solid;
+    margin: auto;
+    margin-top: 20px;
+    width: 90%;
+    height: 500px !important;
+    padding-bottom: 40px;
+    background-color: #F5F8ED;
+
+  }
+
   .chart-container h5{
     margin-block-start: 5px;
     margin-block-end: 5px;
     text-align: center;
     color: #f9f9f9;
   }
-    
-@media screen and (max-width: 965px) {
-  .chart-container{
+  .insights-container h5{
+    margin-block-start: 5px;
+    margin-block-end: 5px;
+    text-align: center;
+  }
+
+  @media screen and (max-width: 1630px) {
+    .switchdiv{
+      margin: 0 300px;
+      }
+
+
+  }  
+
+  @media screen and (max-width: 1330px) {
+    .switchdiv{
+      margin: 0 230px;
+      }
+
+
+  }  
+
+@media screen and (max-width: 1127px) {
+  .chart-container {
     width: 100%;
     height: 300px !important;
+    transition: all 0.5s; /* Add transition for smoother changes */
   }
-  .content{
+
+  .content {
     padding: 0px;
     width: 100%;
   }
-  .logo {
 
-    width: 80px; /* Adjust the width as needed */
-    height: 80px; /* To maintain the aspect ratio */
-  
+  .filters {
+    padding-top: 10px;
+    font-size: small;
   }
-    body {
-        font-size: 1rem;
-    }
-    .sidebar h2{
-       display: none;
-    }
-    .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
 
-    .sidebar {
-        display: flex;
-        width: 100%;
-        justify-content: center;
-        padding-bottom: 20px;
-    }
+  .logo {
+    width: 80px;
+    height: 80px;
+  }
 
-    .sidebar a {
-        padding: 25px 8px;
-        text-decoration: none;
-        font-size: 15px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .sidebar h2 {
-        padding: 0px 8px;
-    }
+  body {
+    font-size: 1rem;
+  }
 
-    table {
-        max-width: 100%;
-    }
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-    th {
-        font-size: 7px;
-        padding: 10px 5px;
-    }
+  .hamburger {
+    display: flex;
+    align-items: center;
+  }
 
-    .pagination {
-        display: flex;
-        align-items: center;
-        margin-top: 20px;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
+  table {
+    max-width: 100%;
+  }
+
+  th {
+    font-size: 7px;
+    padding: 10px 5px;
+  }
+
+  .pagination {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .switchdiv {
+    margin: 0 30px;
+  }
+
+  .sidebar {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding-bottom: 15px;
+    transition: all 0.5s; /* Add transition for smoother changes */
+  }
+
+  .sidebar a {
+    display: none;
+  }
+
+  .sidebar h2 {
+    padding: 0px 8px;
+  }
+
+  .sidebar.open {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  /* Show the <a> tags when the sidebar has the "open" class */
+  .sidebar.open a {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+
+  .sidebar a {
+    padding: 15px;
+  }
 }
 
- 
+
+@media screen and (max-width: 331px) {
+  .switchdiv{
+    margin: 0 0px;
+  }
+
+
+
+}  
+
